# ISL-LSTM

./: .gitignore  README.md  main.py  pyproject.toml
graphs/: ISL_holistic_classification_report.txt
logs/: ISL_holistic_training_log.csv  training_log.csv
models/: AttentionLSTM_h128_l2_d0.5_lr0.001.pt  gesture_model.pt  gesture_model.v1.pt
notebooks/: Adv_Model_training.ipynb  Data_Collection.ipynb  E_Data_Collection.ipynb  E_Model_Training.ipynb  Improved_Data_Collection.ipynb  Improved_Model_Traning.ipynb  Model_Training.ipynb  No-Face-Model.ipynb
results/: AttentionLSTM_h128_l2_d0.5_lr0.001_report.txt  ResidualBiLSTM_h128_l3_d0.5_lr0.001_report.txt
ui/: app.py  utils.py
